--- a/src/app/pages/process-indicators/components/revision-sheet/revision-sheet.component.scss
+++ b/src/app/pages/process-indicators/components/revision-sheet/revision-sheet.component.scss
@@ -1,3 +1,4 @@
+@import '_variables';
 :host {
     width: 100%;
 }
@@ -41,12 +42,12 @@
         border-bottom   : 0;
 
         &:hover {
-            background-color: #f3ac04;
+            background-color: $warn;
         }
     }
 
     .menu-active{
-        background-color: #f3ac04;
+        background-color: $warn;
     }
 
     .menu:first-child {
@@ -54,7 +55,7 @@
     }
 
     .menu:last-child {
-        border-bottom: 2px solid #000000;
+        border-bottom: 2px solid $black;
     }
 
 }
