--- a/src/app/pages/process-risk/components/risk-treatment/risk-treatment.component.scss
+++ b/src/app/pages/process-risk/components/risk-treatment/risk-treatment.component.scss
@@ -1,3 +1,4 @@
+@import '_variables';
 :host{
     width: 100%;
 }
@@ -10,7 +11,7 @@
     font-size      : 12px;
 
     .rows-risk {
-        border: 1px solid #44acab;
+        border: 1px solid $tamarama;
         border-bottom: 0;
     }
 
@@ -20,7 +21,7 @@
         div:first-child {
             padding    : 0 5px;
             min-width  : 240px;
-            border     : 1px solid #44acab;
+            border     : 1px solid $tamarama;
             border-top : 0;
             border-left: 0;
             font-weight: 500;
@@ -28,7 +29,7 @@
 
         div:last-child {
             width: 100%;
-            border-bottom: 1px solid #44acab;
+            border-bottom: 1px solid $tamarama;
         }
     }
 
@@ -38,7 +39,7 @@
         div:first-child {
             min-width  : 240px;
             padding    : 0 5px;
-            border     : 1px solid #44acab;
+            border     : 1px solid $tamarama;
             border-top : 0;
             border-left: 0;
             font-weight: 500;
@@ -46,7 +47,7 @@
 
         div:last-child {
             width: 100%;
-            border-bottom: 1px solid #44acab;
+            border-bottom: 1px solid $tamarama;
         }
     }
 
@@ -56,7 +57,7 @@
         div:first-child {
             min-width  : 240px;
             padding    : 0 5px;
-            border     : 1px solid #44acab;
+            border     : 1px solid $tamarama;
             border-top : 0;
             border-left: 0;
             font-weight: 500;
@@ -64,7 +65,7 @@
 
         div:last-child {
             width: 100%;
-            border-bottom: 1px solid #44acab;
+            border-bottom: 1px solid $tamarama;
         }
     }
 
@@ -78,11 +79,11 @@
 .tbrisk-treatment{
     width: 3000px;
     .mat-table thead,[mat-header-row] {
-        background-color: #44acab;
+        background-color: $tamarama;
     }
     th{
-        color: #ffffff;
-        border: 1px solid #ffffff;
+        color: $white;
+        border: 1px solid $white;
         text-align: center;
         padding: 0 10px;
     }
@@ -92,13 +93,13 @@
     td.mat-cell:first-of-type, td.mat-cell:last-of-type {
         padding: 0 10px;
         text-align: center;
-        border: 1px solid #44acab;
+        border: 1px solid $tamarama;
         border-top: 0;
     }
     td.mat-cell{
         text-align: center;
         padding: 0 10px;
-        border: 1px solid #44acab;
+        border: 1px solid $tamarama;
         border-top: 0;
         position: relative;
     }
