--- a/src/app/shared/components/card-item/card-item.component.scss
+++ b/src/app/shared/components/card-item/card-item.component.scss
@@ -1,3 +1,4 @@
+@import '_variables';
 .card {
     border-radius: 4px;
     margin: 10px 10px 30px 10px;
@@ -5,11 +6,11 @@
     height: 200px;
     width: 200px;
     overflow: hidden;
-    background: #8cc434;
+    background: $primary;
   }
 
   .card:hover{
-    background: #3D4B49;
+    background: $primary;
   }
 
   
@@ -18,7 +19,7 @@
     text-align: center;
     font-weight: 400;
     font-size: 1em;
-    color: white;
+    color: $white;
   }
   .card .description {
     font-weight: 300;
