--- a/src/app/pages/options/components/sgc-iso/sgc-iso.component.scss
+++ b/src/app/pages/options/components/sgc-iso/sgc-iso.component.scss
@@ -1,3 +1,4 @@
+@import '_variables';
 :host {
     width: 100%;
 }
@@ -9,7 +10,7 @@
 
     .title-second-menu {
         width        : 100%;
-        color        : #58babb;
+        color        : $tamarama;
         font-weight  : 600;
         margin-bottom: 100px;
     }
@@ -31,7 +32,7 @@
     }
 
     .layer1 {
-        background-color: #8cc434;
+        background-color: $primary;
         padding         : 10px;
         border-radius   : 5px;
         width           : 100%;
@@ -40,13 +41,13 @@
     }
 
     .layer2 {
-        background-color: #ffffff;
+        background-color: $white;
         padding         : 1px;
         border-radius   : 5px;
     }
 
     .layer3 {
-        background-color: #ffffff;
+        background-color: $white;
         padding         : 15px 10px;
         border-radius   : 5px;
     }
