--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -1,6 +1,7 @@
+@import '_variables';
 .toolbar {
     width           : 100%;
-    background-color: #8cc434;
+    background-color: $primary;
 
     .color-toolbar {
         display        : flex;
@@ -11,7 +12,7 @@
         gap            : 15px;
 
         .title-toolbar {
-            color      : #ffffff;
+            color      : $white;
             font-weight: 700;
             font-size  : 25px;
             cursor     : pointer;
@@ -55,7 +56,7 @@
     padding  : 20px;
 
     .title-sidenav {
-        color        : #5bbdbf;
+        color        : $tamarama;
         font-weight  : 600;
         margin-bottom: 10px;
         margin-top   : 20px;
@@ -63,7 +64,7 @@
 
     a {
         text-decoration: none;
-        color          : #000000;
+        color          : $black;
     }
 }
 
@@ -83,9 +84,9 @@
 }
 
 .cont-user-log {
-    background-color: #ffffff;
+    background-color: $white;
     border-radius   : 5px;
-    color           : #58babb;
+    color           : $tamarama;
     padding         : 10px 20px;
     position        : relative;
     cursor          : pointer;
