--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -35,6 +35,7 @@
     width : 100%;
     height: 100%;
     border: 1px solid rgba(0, 0, 0, 0.5);
+    display: initial;
 
     .mat-drawer-content {
         height       : 100%;
@@ -47,6 +48,7 @@
     height    : 98%;
     padding   : 20px 10px 0 10px;
     box-sizing: border-box;
+    background-color: #ffffff;
 }
 
 .matdrawner-sidenav {
