--- a/src/app/shared/components/modal-login/modal-login.component.scss
+++ b/src/app/shared/components/modal-login/modal-login.component.scss
@@ -1,55 +1,76 @@
 .modal-login {
     background-color: #8cc434;
-    padding         : 10px;
+    padding         : 5px;
 
     .layer-1 {
         background-color: #ffffff;
-        padding         : 3px;
         border-radius   : 15px;
     }
 
-    .layer-2 {
-        background-color: #2c3f3e;
-        border-radius   : 15px;
-    }
+    .cont-logo {
+        width     : 100%;
+        text-align: center;
+        padding   : 59px 0 41px 0;
 
-    .title {
-        color      : #ffffff;
-        font-weight: 500;
-        padding    : 25px 0;
-        text-align : center;
-        font-size  : 20px;
+        img {
+            height: 150px;
+        }
     }
 
     .cont-mff {
         width     : 100%;
-        padding   : 0 25px 10px 25px;
+        padding   : 0 46px 10px 45px;
         box-sizing: border-box;
+        display   : flex;
+        flex-wrap : wrap;
+        gap       : 22px;
 
-        mat-form-field {
-            width: 100%;
+        input {
+            width        : 100%;
+            height       : 70px;
+            border-radius: 10px;
+            background   : #EFEFEF;
+            border       : none;
+            font-size    : 24px;
+            text-indent  : 45px;
+            box-sizing   : border-box;
+            color        : #8D8D8D;
 
-            .mat-form-field-flex {
-                background-color: #ffffff;
+            &:focus {
+                outline: none;
+            }
+
+            &::placeholder {
+                color    : #8D8D8D;
+                font-size: 24px;
             }
         }
     }
 
     .btn-ingresar {
         width           : 100%;
+        height          : 70px;
+        border-radius   : 10px;
         color           : #ffffff;
-        font-weight     : 600;
+        font-weight     : 500;
         background-color: #8cc434;
-        font-size       : 20px;
+        font-size       : 24px;
         border          : none;
         padding         : 5px 0;
         cursor          : pointer;
     }
 
     .forgot-password-text {
-        color     : #b6bebc;
-        padding   : 10px 0 35px;
-        text-align: center;
-        cursor    : pointer;
+        color          : #656565;
+        padding        : 37px 0 86px;
+        text-align     : center;
+        font-size      : 23px;
+        display        : flex;
+        justify-content: center;
+
+        div {
+            line-height: 32px;
+            cursor     : pointer;
+        }
     }
 }
