--- a/src/app/pages/documented-information/components/edit-document/document-one/document-one.component.html
+++ b/src/app/pages/documented-information/components/edit-document/document-one/document-one.component.html
@@ -1,5 +1,12 @@
 <div class="container-responsible-table">
     <table mat-table [dataSource]="dataSource" class="table-standart tbedit-doc">
+        <ng-container matColumnDef="documentName">
+            <th mat-header-cell *matHeaderCellDef> Nombre de documento </th>
+            <td mat-cell *matCellDef="let element;"> 
+               {{element.documentName}} 
+            </td>
+        </ng-container>
+
         <ng-container matColumnDef="code">
             <th mat-header-cell *matHeaderCellDef> Código </th>
             <td mat-cell *matCellDef="let element;"> 
@@ -7,33 +14,34 @@
             </td>
         </ng-container>
 
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Nombre del documento </th>
+        <ng-container matColumnDef="version">
+            <th mat-header-cell *matHeaderCellDef> Versión </th>
             <td mat-cell *matCellDef="let element;"> 
-               {{element.name}} 
+               {{element.version}} 
             </td>
         </ng-container>
 
-        <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef> Fecha </th>
+        <ng-container matColumnDef="resolution">
+            <th mat-header-cell *matHeaderCellDef> Resolución con que se aprueba </th>
             <td mat-cell *matCellDef="let element;"> 
-               {{element.date | date : 'dd/MM/yyyy'}} 
+               {{element.resolution}} 
             </td>
         </ng-container>
 
-        <ng-container matColumnDef="responsible">
-            <th mat-header-cell *matHeaderCellDef> Responsable </th>
+        <ng-container matColumnDef="dateApproval">
+            <th mat-header-cell *matHeaderCellDef> Fecha de aprobación </th>
             <td mat-cell *matCellDef="let element;"> 
-               {{element.responsible}} 
+               {{element.dateApproval | date : 'dd/MM/yyyy'}} 
             </td>
         </ng-container>
 
-        <ng-container matColumnDef="seedoc">
-            <th mat-header-cell *matHeaderCellDef> Ver documento </th>
+        <ng-container matColumnDef="applicableSystems">
+            <th mat-header-cell *matHeaderCellDef> Sistemas Aplicables </th>
             <td mat-cell *matCellDef="let element;"> 
-               <div class="link-download">DESCARGAR</div>
+               {{element.applicableSystems}} 
             </td>
         </ng-container>
+
 
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef> Acciones </th>
