cambio de estilos en header y en menu options

--- a/src/app/pages/options/components/main-options/main-options.component.html
+++ b/src/app/pages/options/components/main-options/main-options.component.html
@@ -2,19 +2,21 @@
     <div class="options-gestion">
         <div class="col1-gestion">
             <div class="opt-gestion" (click)="setIdOption('100')">
-                <div class="layer1">
-                    <div class="layer2">
-                        <img src="assets/images/ic-info-doc.png" alt="ic-info-doc">
-                        <div class="text-option">Información Documentada</div>
+                <div class="layer2">
+                    <div class="content">
+                        <img src="assets/images/ic-folder.png" alt="ic-info-doc">
+                        <div class="text-option">
+                            <div>Información</div>
+                            <div>Documentada</div>
+                        </div>
                     </div>
                 </div>
-
             </div>
             <div class="opt-gestion" routerLink="sgcIso">
-                <div class="layer1">
-                    <div class="layer2">
+                <div class="layer2">
+                    <div class="content">
+                        <img src="assets/images/icon-hand-gear.png" alt="ic-gear">
                         <div class="text-option">
-                            <img src="assets/images/ic-gear.png" alt="ic-gear">
                             <div>SGC</div>
                             <div>ISO 9001</div>
                         </div>
@@ -22,24 +24,25 @@
                 </div>
             </div>
             <div class="opt-gestion" (click)="callservice()">
-                <div class="layer1">
-                    <div class="layer2">
+                <div class="layer2">
+                    <div class="content">
+                        <img src="assets/images/ic-hand-group-gear.png" class="money-ic" alt="ic-money">
                         <div class="text-option">
-                            <img src="assets/images/ic-money.png"  class="money-ic" alt="ic-money">
                             <div>SGCI</div>
                             <div>ISO 37001</div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
 
         <div class="col2-gestion">
             <div class="opt-gestion">
-                <div class="layer1">
-                    <div class="layer2">
+                <div class="layer2">
+                    <div class="content">
+                        <img src="assets/images/icon-padlock.png" alt="ic-padlock">
                         <div class="text-option">
-                            <img src="assets/images/ic-padlock.png" alt="ic-padlock">
                             <div>SGCI</div>
                             <div>ISO 27001</div>
                         </div>
@@ -47,10 +50,10 @@
                 </div>
             </div>
             <div class="opt-gestion">
-                <div class="layer1">
-                    <div class="layer2">
-                        <div class="text-option">
-                            <img src="assets/images/ic-gear-double.png" alt="ic-gear-double">
+                <div class="layer2">
+                    <div class="content">
+                        <img src="assets/images/hand-money.png" alt="ic-gear-double">
+                        <div class="text-option"> 
                             <div>SGCI</div>
                             <div>ISO 22301</div>
                         </div>
@@ -58,11 +61,11 @@
                 </div>
             </div>
             <div class="opt-gestion">
-                <div class="layer1">
-                    <div class="layer2">
-                        <img src="assets/images/ic-user.png" alt="ic-user">
+                <div class="layer2">
+                    <div class="content">
+                        <img src="assets/images/icon-group.png" alt="ic-user">
                         <div class="text-option">GESTIÓN DE USUARIOS</div>
-                    </div>
+                    </div>    
                 </div>
             </div>
         </div>
