--- a/src/app/pages/options/components/main-options/main-options.component.scss
+++ b/src/app/pages/options/components/main-options/main-options.component.scss
@@ -1,3 +1,7 @@
+:host {
+    width: 100%;
+}
+
 .options-gestion {
     display        : flex;
     flex-wrap      : wrap;
@@ -5,6 +9,7 @@
     justify-content: center;
 
     .col1-gestion {
+        width          : 100%;
         display        : flex;
         flex-wrap      : wrap;
         gap            : 100px;
@@ -12,6 +17,7 @@
     }
 
     .col2-gestion {
+        width          : 100%;
         display        : flex;
         flex-wrap      : wrap;
         gap            : 100px;
@@ -19,49 +25,44 @@
     }
 
     .opt-gestion {
-        background-color: #8cc434;
+        width           : 100%;
+        max-width       : 260px;
+        height: 230px;
+        background-color: #ffffff;
         padding         : 5px;
         cursor          : pointer;
         border-radius   : 10px;
-
-        .layer1 {
-            background-color: #ffffff;
-            padding         : 1px;
-            border-radius   : 5px;
-        }
+        box-sizing      : border-box;
+        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
 
         .layer2 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             text-align      : center;
-            padding         : 20px 70px;
-            background-color: #2c3f3e;
-            height          : 100%;
             box-sizing      : border-box;
-            border-radius   : 5px;
+            border-radius   : 10px;
+            background-color: #ffffff;
+            height: 100%;
 
-            img:not(.money-ic) {
-                width : 40px;
-                height: 40px;
+            .content{
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                gap: 17px;
             }
-
-            .money-ic {
-                width : 100px;
-                height: 40px;
-            }
-
             .text-option {
-                color     : #ffffff;
+                width: 100%;
+                color     : #000000;
                 text-align: center;
-                width     : 90px;
+                font-size: 20px;
+                font-weight: 600;
             }
         }
     }
 
     .opt-gestion:hover {
-        background-color: #2c3f3e;
-
-        .layer2 {
-            background-color: #8cc434;
-        }
+        background-color: #8cc434;
     }
 }
 
@@ -80,8 +81,5 @@
 @media (min-width: 1200px) {
     .options-gestion {
         padding: 100px 40px 100px 40px;
-        .col2-gestion {
-            margin-left: 150px;
-        }
     }
 }
