--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -16,26 +16,55 @@
             font-weight: 700;
             font-size  : 25px;
             cursor     : pointer;
+            align-items: center;
+            display  : flex;
+            flex-wrap: wrap;
+            gap      : 10px;
+
+            .lg-menu {
+                width     : 100%;
+                text-align: center;
+                img {
+                    cursor: pointer;
+                }
+            }
+
+            .content-title {
+                display        : flex;
+                flex-wrap      : wrap;
+                align-items    : center;
+                justify-content: center;
+                gap            : 10px;
+                img {
+                    width : 114px;
+                    height: 64px;
+                }
+                div {
+                    text-align: center;
+                }
+            }
         }
 
         .cont-log {
             button {
-                border          : none;
-                background-color: #e6a404;
-                color           : #31271e;
-                padding         : 5px 10px;
-                border-radius   : 5px;
-                font-weight     : 600;
-                cursor          : pointer;
+                border       : none;
+                color        : #ffffff;
+                width        : 116px;
+                height       : 43px;
+                border-radius: 5px;
+                cursor       : pointer;
+                background   : #2B3E3C;
+                border-radius: 10px;
+                font-size    : 20px;
             }
         }
     }
 }
 
 ::ng-deep .matdrawner-container-ly {
-    width : 100%;
-    height: 100%;
-    border: 1px solid rgba(0, 0, 0, 0.5);
+    width  : 100%;
+    height : 100%;
+    border : 1px solid rgba(0, 0, 0, 0.5);
     display: initial;
 
     .mat-drawer-content {
@@ -45,10 +74,10 @@
 }
 
 .matdrawner-sidenav-content {
-    display   : flex;
-    height    : 98%;
-    padding   : 20px 10px 0 10px;
-    box-sizing: border-box;
+    display         : flex;
+    height          : 98%;
+    padding         : 20px 10px 0 10px;
+    box-sizing      : border-box;
     background-color: #ffffff;
 }
 
@@ -86,18 +115,18 @@
 }
 
 .cont-user-log {
-    background-color: $white;
-    border-radius   : 5px;
-    color           : $tamarama;
-    padding         : 10px 20px;
-    position        : relative;
-    cursor          : pointer;
+    border-radius: 5px;
+    color        : $tamarama;
+    position     : relative;
+    cursor       : pointer;
+    display      : flex;
+    gap          : 10px;
+    align-items  : center;
 
     .cont-info {
-        width          : 100%;
-        display        : flex;
-        justify-content: space-between;
-        gap            : 10px;
+        font-weight: 800;
+        font-size  : 13px;
+        color      : #ffffff;
     }
 }
 
@@ -233,10 +262,50 @@
     background-color: rgba(0, 0, 0, 0.04);
 }
 
+@media (min-width: 425px) {
+    .toolbar {
+        .color-toolbar {
+            .title-toolbar {
+                flex-wrap: initial;
+
+                .lg-menu {
+                    width: auto;
+                }
+
+                .content-title {
+                    flex-wrap: initial;
+                }
+            }
+        }
+    }
+}
+
 @media (min-width: 629px) {
     .toolbar {
         .color-toolbar {
             justify-content: space-between;
+        }
+    }
+}
+
+@media (min-width: 1024px) {
+    .toolbar {
+        .color-toolbar {
+            .title-toolbar {
+                gap: 179px;
+
+                .content-title {
+                    gap: 28px;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 1200px) {
+    .toolbar {
+        .color-toolbar {
+            padding: 13px 50px;
         }
     }
 }
