--- a/src/app/pages/documented-information/components/edit-document/edit-document.component.html
+++ b/src/app/pages/documented-information/components/edit-document/edit-document.component.html
@@ -15,6 +15,6 @@
       <app-document-three [newData]="dataDoc3" (onEdit)="ModalDoc($event)" [editData]="dataEditDoc3"></app-document-three>
     </mat-tab>
     <mat-tab label="Actas">
-      
+      <app-actas [newData]="dataActa" (onEdit)="ModalDoc($event)" [editData]="dataEditActa"></app-actas>
     </mat-tab>
 </mat-tab-group>
