--- a/src/app/pages/documented-information/components/modal-document/modal-document.component.html
+++ b/src/app/pages/documented-information/components/modal-document/modal-document.component.html
@@ -20,6 +20,10 @@
                         [dataExternalDoc]="dataExternalDoc"
                         (onSave)="save($event)">
 </app-external-documents>
+<app-actas-form *ngIf="documentSelected === 4"
+                [dataActas]="dataActas"
+                (onSave)="save($event)">
+</app-actas-form>
 <!-- <div class="container-title">Documento</div>
 <form [formGroup]="formDocument" class="form-standart frm-modal-document" mat-dialog-content>
 
