--- a/src/app/pages/documented-information/components/edit-document/edit-document.component.scss
+++ b/src/app/pages/documented-information/components/edit-document/edit-document.component.scss
@@ -39,4 +39,8 @@
     th.mat-header-cell:first-of-type, th.mat-header-cell:last-of-type{
         padding: 0;
     }
+
+    td.mat-cell {
+        text-align: center;
+    }
 }
