--- a/src/app/pages/documented-information/components/modal-document/modal-document.component.scss
+++ b/src/app/pages/documented-information/components/modal-document/modal-document.component.scss
@@ -4,40 +4,42 @@
     mat-form-field {
         max-width: initial;
     }
-
-    .cont-download {
-        background-color: #8cc434;
-        height          : 100px;
-        display         : flex;
-        flex-wrap       : wrap;
-        align-items     : center;
-        justify-content : center;
-        cursor          : pointer;
-        margin-bottom   : 10px;
-        border          : 1px solid #000000;
-        border-style    : dashed;
-
-        mat-icon {
-            width    : 50px;
-            height   : 50px;
-            font-size: 50px;
-        }
-
-        .content {
-            display        : flex;
-            flex-wrap      : wrap;
-            justify-content: center;
-
-            div {
-                width     : 100%;
-                text-align: center;
-                font-size : 16px;
-            }
-        }
-    }
 }
 
-.mff-typedoc{
-    width: 100%;
+.mff-typedoc {
+    width      : 100%;
     padding-top: 1.34375em;
+}
+
+::ng-deep .cont-download {
+    background-color: #8cc434;
+    width           : 100%;
+    height          : 100px;
+    display         : flex;
+    flex-wrap       : wrap;
+    align-items     : center;
+    justify-content : center;
+    cursor          : pointer;
+    margin-bottom   : 10px;
+    border          : 1px solid #000000;
+    border-style    : dashed;
+    box-sizing: border-box;
+
+    mat-icon {
+        width    : 50px;
+        height   : 50px;
+        font-size: 50px;
+    }
+
+    .content {
+        display        : flex;
+        flex-wrap      : wrap;
+        justify-content: center;
+
+        div {
+            width     : 100%;
+            text-align: center;
+            font-size : 16px;
+        }
+    }
 }
