--- a/src/app/pages/documented-information/components/modal-document/general-documents/general-documents.component.html
+++ b/src/app/pages/documented-information/components/modal-document/general-documents/general-documents.component.html
@@ -33,7 +33,7 @@
 
     <div class="cont-download" (click)="inptDownload.click()">
         <div class="content">
-            <mat-icon>file_download</mat-icon>
+            <mat-icon>backup</mat-icon>
             <div>Subir Archivo</div>
         </div>
     </div>
